# modern-replicator

./: .vars.ini  MANIFEST.in  Makefile  README.md  setup.cfg  setup.py
.github/workflows/: build.yml
modern_replicator/: __init__.py
modern_replicator/tests/: __main__.py
tests/: test_response_codes.py  test_resume.py
