[metadata]
name = modern-replicator
description = Rewrite of http-replicator using threads
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/thatch/modern-replicator/
author = Tim Hatch
author_email = tim@timhatch.com

[options]
packages = find:
python_requires = >=3.10
setup_requires =
    setuptools_scm >= 8
    setuptools >= 65
include_package_data = true
install_requires =
    click
    xattr

[options.extras_require]
dev =
    checkdeps == 0.9.0
    mypy == 1.19.1
    ruff == 0.15.6
    tox == 4.50.0
    tox-uv == 1.33.4
test =
    coverage >= 6
    pytest >= 8

[options.entry_points]
# console_scripts =
#     foo=foo:bar

[check]
metadata = true
strict = true

[coverage:run]
branch = True
source = modern_replicator,tests
omit =
    modern_replicator/_version.py

[coverage:report]
fail_under = 70
precision = 1
show_missing = True
skip_covered = True

[mypy]
ignore_missing_imports = True

[tox:tox]
envlist = py{310,311,312,313,314}, coverage

[testenv]
deps = .[test]
commands =
    coverage run -m pytest
setenv =
    COVERAGE_FILE={toxworkdir}/.coverage.{envname}

[testenv:coverage]
deps = coverage
setenv =
    COVERAGE_FILE={toxworkdir}/.coverage
commands =
    coverage combine
    coverage report
depends =
    py{10,311,312,313,314}

